compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bit_arrays__match_non_byte_aligned_size_error.snap
---
source: compiler-core/src/go/tests/bit_arrays.rs
assertion_line: 545
expression: "\nfn go(x) {\n  let assert <<a:size(7)>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x) {
  let assert <<a:size(7)>> = x
}


----- ERROR
error: Unsupported feature for compilation target
  ┌─ /src/go/error.gleam:3:16
  │
3 │   let assert <<a:size(7)>> = x
  │                ^^^^^^^^^

Non byte aligned integer in patterns is not supported for Go compilation.
