compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bit_arrays__negative_size_constant_value.snap
---
source: compiler-core/src/go/tests/bit_arrays.rs
expression: "\nfn go(x: Int) {\n  <<1:size(-1)>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x: Int) {
  <<1:size(-1)>>
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ(x gleam_P.Int_t) gleam_P.BitArray_t {
  return gleam_P.ToBitArray([]byte{})
}
